--- a/index.html
+++ b/index.html
@@ -96,7 +96,8 @@
                                         </header>
                                         <p><small>Master the fundamentals of programming with comprehensive DSA curriculum. From basic arrays to advanced graph algorithms.</small></p>
                                         <p><strong><small>BEGINNER → ADVANCE</small></strong></p>
-                                        <p><small><strong>Coming Soon</strong></small></p><br>
+                                        <p><small><strong>Coming Soon</strong></small></p>
+                                        <br>
                                         
                                     </td>
                                 </tr>
