--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
 </head>
 <body bgcolor="#F1ECE5">
-    
+
+<section id="home"></section>
 
 <header role="banner">
 <table width="100%" border="0" cellpadding="5" cellspacing="0">
@@ -183,7 +184,7 @@
         </section>
 
         <!-- About Section -->
-        <section>
+        <section id="about">
             <br><br><br>
             <center>
                 <font size="6" face="Arial">
@@ -268,7 +269,7 @@
         </section>
 
         <!-- Contact Us Section -->
-        <section>
+        <section id="contact">
             <br><br><br>
             <center>
                 <font size="6" face="Arial">
@@ -339,7 +340,8 @@
                     <b>Contact Information:</b><br>
                     Email: algocampus8@gmail.com<br>
                     Phone: +91 9876543210<br>
-                    Address: 123 Street, Kolkata, 700001
+                    Address: 123 Street, Kolkata, 700001<br>
+                    <a href="https://x.com/iamsouvik007_">Follow on X</a>
                 </font>
                 <br><br>
                 
