--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
                     Email: algocampus8@gmail.com<br>
                     Phone: +91 9876543210<br>
                     Address: 123 Street, Kolkata, 700001<br>
-                    <a href="https://x.com/iamsouvik007_">Follow on X</a>
+                    <a href="https://x.com/iamsouvik007_?t=8bgvMAAFc6D4QHOrbGuBbQ&s=08" target="_blank">Follow on X</a>
                 </font>
                 <br><br>
                 
